@@ -1,1 +1,0 @@
-KDE CD player
