@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.5333 2023/09/05 06:04:53 pin Exp $
+$NetBSD: CHANGES-2023,v 1.5334 2023/09/05 06:41:46 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -7782,3 +7782,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated devel/py-ipykernel to 6.25.2 [adam 2023-09-05]
 	Updated www/py-aiohttp-socks to 0.8.1 [adam 2023-09-05]
 	Updated shells/oh-my-posh to 18.7.0 [pin 2023-09-05]
+	Removed multimedia/kscd [wiz 2023-09-05]
